Change Saude variable name, add Educador time of entry and exit time

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -355,7 +355,7 @@
                   </div>
 
                   <md-input-container flex="100" flex-gt-xs="70" ng-if="vm.saude.tomaMedicacao">
-                    <textarea rows="5" name="tipoMedicacao" ng-model="vm.saude.tipoMedicacao" placeholder="Descrição da Medicação"></textarea>
+                    <textarea rows="5" name="descricaoMedicacao" ng-model="vm.saude.descricaoMedicacao" placeholder="Descrição da Medicação"></textarea>
                   </md-input-container>
                 </div>
 
