--- a/frontend/src/main/frontend/src/app/main/turma/turma.html
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.html
@@ -1,39 +1,27 @@
-<!DOCTYPE html>
 <div id="turmas" class="page-layout simple inner-sidenav">
-
-  <!-- HEADER -->
   <div class="header md-accent-bg" layout="row" layout-align="space-between center">
-
-    <!-- APP TITLE -->
     <div layout="row" layout-align="start center">
-      <!-- <md-button class="md-icon-button sidenav-toggle" hide-gt-md ng-click="vm.toggleSidenav('sidenav')">
-                <md-icon md-font-icon="icon-menu" class="icon"></md-icon>
-            </md-button> -->
 
       <div class="logo" layout="row" layout-align="start center">
         <span class="logo-icon">
-          <md-icon md-font-icon="icon-school" class="s24"></md-icon>
+          <md-icon md-font-icon="icon-account-box" class="s24"></md-icon>
         </span>
         <span class="logo-text">Turmas</span>
       </div>
-    </div>
-    <!-- / APP TITLE -->
 
-    <!-- SEARCH -->
+    </div>
     <div class="search-input-wrapper" layout="row" layout-align="start center">
+
       <label for="search">
         <md-icon md-font-icon="icon-magnify"></md-icon>
       </label>
       <md-input-container md-no-float class="m-0">
         <input id="search" placeholder="Pesquisar turmas..." type="text" ng-model="vm.search">
       </md-input-container>
+
     </div>
-    <!-- / SEARCH -->
+</div>
 
-  </div>
-  <!-- / HEADER -->
-
-  <!-- SELECTED BAR -->
   <div ng-show="vm.selectedTurmas.length > 0" class="selected-bar header animate-slide-down md-accent-bg" layout="row" layout-align="start center">
 
     <div class="close-button-wrapper" ng-click="vm.selectedTurmas =[]">
@@ -79,61 +67,20 @@
     </div>
 
   </div>
-  <!-- / SELECTED BAR -->
-
-  <!-- CONTENT -->
   <div class="content" md-background-bg layout="row" layout-align="start start">
-
-    <!-- MAIN -->
     <div class="main scrollable" ms-scroll>
-
-      <!-- CONTACT LIST -->
       <md-list class="turmas-list">
-
-        <!-- CONTACT LIST HEADER -->
         <md-subheader class="md-no-sticky md-white-bg">
-
           <div layout="row" layout-align="space-between center">
-
             <div class="list-title" layout="row" layout-align="start center" ng-hide="editGroupForm.$visible">
               <span ng-if="vm.listType === 'all'">Turmas Cadastrados</span>
-              <!-- <span ng-if="vm.listType === 'frequent'" translate="CONTACTS.FREQUENTLY_CONTACTED">Frequnetly
-                                contacted</span>
-                            <span ng-if="vm.listType === 'starred'" translate="CONTACTS.STARRED_CONTACTS">Starred
-                                contacts</span>
-                            <span ng-if="vm.listType.name">{{vm.listType.name}}</span> -->
-
               <span ng-if="filteredTurmas.length" class="secondary-text turmas-count">
                                 ({{filteredTurmas.length}})
                             </span>
             </div>
 
-            <!-- <div class="edit-group-form" ng-show="vm.listType.name" layout="row"
-                             layout-align="start center">
-                            <span ng-show="editGroupForm.$visible"
-                                  editable-text="vm.listType.name"
-                                  e-form="editGroupForm"
-                                  onaftersave="vm.editGroup()">
-                            </span>
-
-                            <md-button class="md-icon-button edit-group-button" ng-click="editGroupForm.$show()"
-                                       ng-hide="editGroupForm.$visible" aria-label="edit group name" translate
-                                       translate-attr-label="CONTACTS.EDIT_GROUP_NAME">
-                                <md-icon md-font-icon="icon-pencil s18"></md-icon>
-                            </md-button>
-
-                            <md-button class="md-icon-button edit-group-button" ng-click="vm.deleteGroup($event)"
-                                       ng-hide="editGroupForm.$visible" aria-label="delete group" translate
-                                       translate-attr-label="CONTACTS.DELETE_GROUP">
-                                <md-icon md-font-icon="icon-delete s18"></md-icon>
-                            </md-button>
-                        </div> -->
-
-            <div flex></div>
-
             <span>Ordenar</span>
             <md-menu>
-
               <md-button class="md-icon-button" aria-label="Ordenar">
                 <md-icon md-font-icon="icon-sort-alphabetical" ng-click="$mdOpenMenu($event)"></md-icon>
               </md-button>
@@ -141,29 +88,29 @@
               <md-menu-content width="3">
 
                 <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== false && {'font-weight':'500'}">
-                    <span>Nome</span>
+                  <md-button ng-click="vm.listOrder = 'descricao'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'descricao' && vm.listOrderAsc=== false && {'font-weight':'500'}">
+                    <span>Descricao</span>
                     <small>(A até Z)</small>
                   </md-button>
                 </md-menu-item>
 
                 <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== true && {'font-weight':'500'}">
-                    <span>Nome</span>
+                  <md-button ng-click="vm.listOrder = 'descricao'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'descricao' && vm.listOrderAsc=== true && {'font-weight':'500'}">
+                    <span>Descricao</span>
                     <small>(Z até A)</small>
                   </md-button>
                 </md-menu-item>
 
                 <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'ra'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'ra' && vm.listOrderAsc=== false && {'font-weight':'500'}">
-                    <span>RA</span>
+                  <md-button ng-click="vm.listOrder = 'id'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'id' && vm.listOrderAsc=== false && {'font-weight':'500'}">
+                    <span>Id</span>
                     <small>(Crescente)</small>
                   </md-button>
                 </md-menu-item>
 
                 <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'ra'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'ra' && vm.listOrderAsc=== true && {'font-weight':'500'}">
-                    <span>RA</span>
+                  <md-button ng-click="vm.listOrder = 'id'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'id' && vm.listOrderAsc=== true && {'font-weight':'500'}">
+                    <span>Id</span>
                     <small>(Decrescente)</small>
                   </md-button>
                 </md-menu-item>
@@ -175,50 +122,65 @@
           </div>
 
         </md-subheader>
-        <!-- / CONTACT LIST HEADER -->
 
-        <!-- CONTACT ITEM -->
-        <md-list-item class="turma-item md-white-bg" md-ink-ripple ng-repeat="turma in vm.turmas | filter: vm.search | filter: global.search | filterByIds:vm.filterIds |  orderBy: vm.listOrder :vm.listOrderAsc | filter:query as filteredTurmas track by turma.ra"
+        <md-list-item class="turma-item md-white-bg" md-ink-ripple ng-repeat="turma in vm.turmas | filter: vm.search | filter: global.search | filterByIds:vm.filterIds |  orderBy: vm.listOrder :vm.listOrderAsc | filter:query as filteredTurmas track by turma.id"
           ng-click="vm.openTurmaDialog($event, turma)" ng-style="{'transform': 'translate3d(0px, '+$index * 100+'%, 0px)', 'z-index': filteredTurmas.length - $index}" ng-class="{'selected': vm.isSelected(turma)}">
 
           <md-checkbox ng-checked="vm.exists(turma, vm.selectedTurmas)" ng-click="vm.toggleSelectTurma(turma, $event)" aria-label="{{vm.exists(turma, vm.selectedTurmas) ? 'Deselect' : 'Select'}}">
           </md-checkbox>
           <div class="item" layout="row">
-            <!-- <img class="md-avatar" ng-if="contact.avatar" alt="{{contact.name}}" ng-src="{{contact.avatar}}" /> -->
-            <p class="numero raTurma">
-              {{turma.id}}
-            </p>
-            <p class="texto nomeTurma">
-              {{turma.cpf_educador}}
-            </p>
-            <p class="texto descricao">
-              {{turma.descricao}}
-            </p>
+
+          <p class="hide show-gt-xs numero idTurma">
+            {{turma.id}}
+          </p>
+
+          <p class="hide show-gt-sm texto descricaoTurma">
+            {{turma.descricao}}
+          </p>
+
+          <p class="hide show-gt-sm texto cpfEducador">
+            {{turma.cpfEducador}}
+          </p>
+
+        </div>
+          <div class="md-secondary actions" layout="row" layout-align="start center">
+
+            <md-menu>
+              <md-button class="md-icon-button" aria-label="Mais">
+                <md-icon md-font-icon="icon-dots-vertical" ng-click="$mdOpenMenu($event)"></md-icon>
+              </md-button>
+
+              <md-menu-content width="3">
+                <md-menu-item>
+                  <md-button ng-click="vm.openTurmaDialog($event, turma)">
+                    Editar turma
+                  </md-button>
+                </md-menu-item>
+
+                <md-menu-item>
+                  <md-button ng-click="vm.deleteTurmaConfirm(turma, ev)">
+                    Apagar turma
+                  </md-button>
+                </md-menu-item>
+
+              </md-menu-content>
+            </md-menu>
 
           </div>
 
-
         </md-list-item>
-        <!-- CONTACT ITEM -->
 
       </md-list>
-      <!-- / CONTACT LIST -->
 
-      <!-- NO RESULTS -->
       <md-list-item class="no-results md-white-bg" ng-show="filteredTurmas.length === 0">
         <p>Nenhum turma encontrada.</p>
       </md-list-item>
-      <!-- / NO RESULTS -->
 
     </div>
-    <!-- / MAIN -->
 
   </div>
-  <!-- / CONTENT -->
 
-  <!-- ADD CONTACT BUTTON -->
   <md-button class="md-fab md-accent md-icon-button" id="add-turma-button" ng-click="vm.openTurmaDialog($event)" aria-label="Adicionar turma">
     <md-icon md-font-icon="icon-account-plus"></md-icon>
   </md-button>
-  <!-- / ADD CONTACT BUTTON -->
 </div>
