--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -24,6 +24,21 @@
         </md-input-container>
       </div>
 
+      <div layout="column" layout-gt-xs="row" flex ng-repeat="c in vm.listaAlunoTurma track by $index" ng-if="vm.listaAlunoTurma == true">
+        <md-input-container flex="100" flex-gt-xs="15">
+          <input type="text" ng-model="c.ra" placeholder="Ra do Aluno" value="{{c.ra}}">
+        </md-input-container>
+
+        <md-button class="md-raised md-accent adicionarButton" ng-click="vm.addAutomovel(c)" ng-if="vm.isLastAutomovel(c)">
+          Adicionar
+        </md-button>
+
+        <md-button class="md-raised md-warn adicionarButton" ng-click="vm.removeAutomovel(c)">
+          Remover
+        </md-button>
+
+      </div>
+
 
 
     <md-dialog-actions layout="row" layout-align="space-between center">
