--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
@@ -64,7 +64,49 @@
       </md-input-container>
 
       </br>
-      
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Rua</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.rua" type="text" required>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Nº</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.numero" mask="9?9?9?9" type:"text" required>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Complemento</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.complemento" type:"text">
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Bairro</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.bairro" type:"text" required>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Cidade</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.cidade" type:"text" required>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>CEP</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input mask="99999-999" ng-model="vm.educador.endereco.cep" type:"text" required>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
+        <label>Ponto de referência</label>
+        <md-icon md-font-icon="icon-home"></md-icon>
+        <input ng-model="vm.educador.endereco.pontoReferencia"  type:"text">
+      </md-input-container>
+
       <md-input-container class="md-icon-float md-block">
         <label>Numero da Carteira Profissional</label>
         <md-icon md-font-icon="">reorder</md-icon>
