--- a/frontend/src/main/frontend/src/app/main/turma/turma.html
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.html
@@ -134,8 +134,8 @@
             {{turma.id}}
           </p>
 
-          <p class="hide show-gt-sm texto descricaoTurma">
-            {{turma.descricao}}
+          <p class="hide show-gt-sm texto nomeTurma">
+            {{turma.nome}}
           </p>
 
           <p class="hide show-gt-sm texto cpfEducador">
