update radial button to switch

--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.scss
@@ -84,5 +84,8 @@ md-dialog {
             background-color: rgba(0, 0, 0, 0.03);
             border-top: 1px solid rgba(0, 0, 0, 0.12);
         }
+        md-switch{
+          margin: 3px auto auto 35px;
+        }
     }
 }
