--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
@@ -1,70 +1,14 @@
-<!-- DIALOG -->
 <md-dialog class="usuario-dialog">
 
   <form name="usuarioForm" class="md-inline-form" novalidate>
 
-    <!-- DIALOG TOOLBAR -->
-    <!-- <md-toolbar class="md-accent" layout="column"> -->
-
-    <!-- TOOLBAR TOP -->
     <div class="md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
       <span class="title">{{vm.title}}</span>
       <md-button class="md-icon-button" ng-click="vm.closeDialog()" aria-label="Fechar diálogo">
         <md-icon md-font-icon="icon-close"></md-icon>
       </md-button>
     </div>
-    <!-- / TOOLBAR TOP -->
 
-    <!-- TOOLBAR MIDDLE -->
-    <!-- <div class="md-toolbar-tools md-toolbar-tools-middle" flex layout="column" layout-align="center center">
-                <div layout="column" layout-align="center center">
-                    <img ng-src="{{vm.usuario.avatar}}" class="md-avatar avatar usuario-avatar huge"
-                         alt="{{vm.usuario.name}}"/>
-                    <div class="usuario-name">{{vm.usuario.nome}}</div>
-                </div>
-            </div> -->
-    <!-- / TOOLBAR MIDDLE -->
-
-    <!--  TOOLBAR BOTTOM -->
-    <!-- <div class="md-toolbar-tools md-toolbar-tools-bottom" layout="row" layout-align="center center">
-
-                <div flex layout="row" layout-align="center center">
-
-                    <md-button class="md-icon-button"
-                               ng-click="vm.toggleInArray(vm.usuario.id, vm.user.starred)"
-                               aria-label="Toggle starred" translate
-                               translate-attr-aria-label="CONTACTS.TOGGLE_STARRED">
-                        <md-icon ng-if="vm.exists(vm.usuario.id,vm.user.starred)" md-font-icon="icon-star"
-                                 class="amber-fg"></md-icon>
-                        <md-icon ng-if="!vm.exists(vm.usuario.id,vm.user.starred)"
-                                 md-font-icon="icon-star-outline"></md-icon>
-                    </md-button>
-
-                    <md-menu>
-                        <md-button class="md-icon-button" aria-label="More" translate
-                                   translate-attr-aria-label="TODO.MORE">
-                            <md-icon md-font-icon="icon-account-multiple-plus" ng-click="$mdOpenMenu($event)"></md-icon>
-                        </md-button>
-
-                        <md-menu-content width="3">
-                            <md-list-item ng-if="vm.user.groups" ng-repeat="group in vm.user.groups"
-                                          ng-click="vm.toggleInArray(vm.usuario.id,group.usuarioIds)">
-                                <p class="pl-8"
-                                   ng-style="vm.exists(vm.usuario.id,group.usuarioIds) && {'font-weight':'500'}">
-                                    {{group.name}}
-                                </p>
-                            </md-list-item>
-
-                        </md-menu-content>
-                    </md-menu>
-                </div>
-            </div> -->
-    <!-- / TOOLBAR BOTTOM -->
-
-    <!-- </md-toolbar> -->
-    <!-- / DIALOG TOOLBAR -->
-
-    <!-- DIALOG CONTENT -->
     <md-dialog-content ms-scroll>
 
       <md-input-container class="md-icon-float md-block">
@@ -94,101 +38,16 @@
          </md-option>
        </md-select>
      </md-input-container>
-   </br> <!-- VERIFICAR ESSAS GAMBIARRAS COM </br> -->
-      <md-icon md-font-icon="icon-cog-box"></md-icon>
-      <label>Ativo?</label>
-      <md-input-container class="md-icon-float md-block">
-        <md-radio-group ng-model="vm.usuario.ativo" required>
-          <md-radio-button ng-value="true">Sim</md-radio-button></br>
-          <md-radio-button ng-value="false">Não</md-radio-button>
-        </md-radio-group>
-      </md-input-container>
-      <!-- Desativado temporariamente -->
 
-
-      <!-- Este input só aparece se "Cartão" for selecionado no [md-select] acima: -->
-      <!--
-      <md-input-container class="md-icon-float md-block" ng-if="vm.usuario.formaPgto == 'Cartão'">
-        <label>Número do Cartão (somente números)</label>
-        <md-icon md-font-icon="icon-credit-card"></md-icon>
-        <input ng-model="vm.usuario.cartao.numero" type="number" md-maxlength="16">
-      </md-input-container>
-
-      <md-input-container class="md-icon-float md-block">
-        <label>Valor Mensal (em reais)</label>
-        <md-icon md-font-icon="icon-currency-usd"></md-icon>
-        <input ng-model="vm.usuario.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
-      </md-input-container>
-
-      <md-input-container class="md-icon-float md-block">
-        <label>Vencimento</label>
-        <md-icon md-font-icon="icon-calendar-select"></md-icon>
-        <input ng-model="vm.usuario.vencAtual" type="number" min="1" max="28" required>
-        <div class="hint" ng-if="showHints">Dia de vencimento, de 1 até 28.</div>
-      </md-input-container>
-    -->
-      <!-- <div ng-if="!vm.allFields" layout="row" layout-align="center center">
-                <md-button class="md-accent" ng-click="vm.allFields = true" translate="CONTACTS.SHOW_ALL_FIELDS">Show
-                    All Fields
-                </md-button>
-            </div> -->
-
-      <!-- <div ng-if="vm.allFields"> -->
-      <!-- <md-input-container class="md-block">
-                    <md-icon md-font-icon="icon-phone"></md-icon>
-                    <input ng-model="vm.usuario.phone" type="text" placeholder="Phone number" translate
-                           translate-attr-placeholder="CONTACTS.PHONE_NUMBER">
-                </md-input-container>
-
-                <md-input-container class="md-block">
-                    <md-icon md-font-icon="icon-email" class="email"></md-icon>
-                    <input ng-model="vm.usuario.email" type="email" placeholder="Email" translate
-                           translate-attr-placeholder="CONTACTS.EMAIL">
-                </md-input-container>
-
-
-                <md-input-container class="md-block">
-                    <md-icon md-font-icon="icon-domain"></md-icon>
-                    <input ng-model="vm.usuario.company" type="text" placeholder="Company" translate
-                           translate-attr-placeholder="CONTACTS.COMPANY">
-                </md-input-container>
-
-                <md-input-container class="md-block">
-                    <md-icon md-font-icon="icon-worker"></md-icon>
-                    <input ng-model="vm.usuario.jobTitle" type="text" placeholder="Job title" translate
-                           translate-attr-placeholder="CONTACTS.JOB_TITLE">
-                </md-input-container>
-
-                <md-datepicker class="birthday-input" ng-model="vm.usuario.birthday" md-placeholder="Birthday"
-                               ng-required="false">
-                </md-datepicker>
-
-                <md-input-container class="md-block">
-                    <md-icon md-font-icon="icon-home"></md-icon>
-                    <input ng-model="vm.usuario.address" type="text" placeholder="Address" translate
-                           translate-attr-placeholder="CONTACTS.ADDRESS">
-                </md-input-container>
-
-                <div layout="row" class="md-block textarea-wrapper" layout-align="start start">
-                    <md-icon md-font-icon="icon-note"></md-icon>
-                    <md-input-container flex>
-                        <label translate translate-attr-placeholder="CONTACTS.NOTES">Notes</label>
-                        <textarea ng-model="vm.usuario.notes" type="text" max-rows="4"></textarea>
-                    </md-input-container>
-                </div>
-
-                <div layout="row" layout-align="center center">
-                    <md-button class="md-accent" ng-click="vm.allFields = false" translate="CONTACTS.FEWER_FIELDS">Fewer
-                        Fields
-                    </md-button>
-                </div> -->
-
-      <!-- </div> -->
+     <md-input-container class="mc-icon-float">
+        <md-icon md-font-icon="icon-cog-box"></md-icon>
+        <md-switch md-no-ink ng-model="vm.usuario.ativo" ng-true-value="'Sim'" ng-false-value="'Não'">
+          Ativo ? {{vm.usuario.ativo}}
+        </md-switch>
+     </md-input-container>
 
     </md-dialog-content>
-    <!-- / DIALOG CONTENT -->
 
-    <!-- DIALOG ACTIONS -->
     <md-dialog-actions layout="row" layout-align="space-between center">
       <div layout="row" layout-align="start center">
         <md-button type="submit" ng-if="!vm.newUsuario" ng-click="vm.saveUsuario()" class="send-button md-accent md-raised" ng-disabled="usuarioForm.$invalid || usuarioForm.$pristine" aria-label="Salvar">
@@ -208,9 +67,7 @@
         </md-button>
       </div>
     </md-dialog-actions>
-    <!-- / DIALOG ACTIONS -->
 
   </form>
 
 </md-dialog>
-<!-- / DIALOG -->
