--- a/frontend/src/main/frontend/src/app/main/relatorio/relatorio.scss
+++ b/frontend/src/main/frontend/src/app/main/relatorio/relatorio.scss
@@ -184,10 +184,13 @@
                 }
             }
 
-            th {
-                &.dataPagamento {
-                    text-align: center;
-                }
+            th{
+              &.dataPagamento{
+                text-align: right;
+              }
+              &.total{
+                text-align: right;
+              }
             }
 
             td {
@@ -348,5 +351,8 @@
 .md-button.btnPdf {
   color: white;
   background-color: rgb(218, 71, 62);
+}
 
+md-icon.md-default-theme{
+  color: #FFFFFF;
 }
