--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.scss
@@ -85,4 +85,12 @@ md-dialog {
             border-top: 1px solid rgba(0, 0, 0, 0.12);
         }
     }
+
+    .md-datepicker-button.md-icon-button{
+      display: none;
+    }
+
+    .md-datepicker-input{
+      margin-left: 22px;
+    }
 }
