fix Ordenar display on screen

--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
@@ -109,19 +109,19 @@
 
       <md-input-container class="md-icon-float md-block">
         <label>Numero da Carteira Profissional</label>
-        <md-icon md-font-icon="icon-assignment"></md-icon>
+        <md-icon md-font-icon="icon-credit-card"></md-icon>
         <input ng-model="vm.educador.numeroCarteiraProfissional" type="text" mask="999999" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Série da Carteira Profissional</label>
-        <md-icon md-font-icon=""></md-icon>
+        <md-icon md-font-icon="icon-credit-card"></md-icon>
         <input ng-model="vm.educador.serieCarteiraProfissional" type="text" mask="99999" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Número do PIS</label>
-        <md-icon md-font-icon=""></md-icon>
+        <md-icon md-font-icon="icon-credit-card"></md-icon>
         <input ng-model="vm.educador.numeroPis" type="text" mask="999.99999.99-9" required>
       </md-input-container>
 
