update aluno icon

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -12,7 +12,7 @@
 
             <div class="logo" layout="row" layout-align="start center">
                 <span class="logo-icon">
-          <md-icon md-font-icon="icon-school" class="s24"></md-icon>
+          <md-icon md-font-icon="icon-library" class="s24"></md-icon>
         </span>
                 <span class="logo-text">Alunos</span>
             </div>
